초기 구조 커밋